# thinking-engine

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  arxiv_paper.tex  create_dataset_from_pdf.py  demo_pdf_training.py  deploy_api.py  multiplatform_test_report.json  neuron_evolution_demo.py  pyproject.toml  requirements.txt  run_distributed_network.py  run_model.py  run_multiplatform_tests.py  run_self_organizing_network.py  sample_document.txt  setup.py  test_api.py  test_pdf_processing.py  thinking_engine_benchmark_report.md
.github/workflows/: publish-to-pypi.yml
Introduction_to_Quantum_Computers_dataset/: DATASET_SUMMARY.txt  full_extracted_text.txt  training_dataset.json
Introduction_to_Quantum_Computers_dataset/training_chunks/: chunk_01.txt  chunk_02.txt  chunk_03.txt  chunk_04.txt  chunk_05.txt  chunk_06.txt
arxiv_submission/: arxiv_paper.tex  compile_paper.sh  references.bib
core/: agent_router.py  backend.py  cognitive_scheduler.py  communication_bus.py  cortex.py  distributed_manager.py  learning_manager.py  memory.py  organics_manager.py  topology_optimizer.py  utils.py
data/: python_code_examples.json  python_knowledge.json  test.txt
docs/: index.html
interfaces/native_agents/: file_agent.py  reasoning_agent.py
memory_store/: experiences.jsonl
models/: demo_trained_model.think  thinking_model.think
storage/policies/: selector_policy.json
system_prompts/: default.json  friendly_assistant.json
systems/: cognitive_network.py  distributed_topology.py  energy_flow.py
tests/: test_distributed.py  test_multiplatform.py  test_router.py  test_topology_optimizer.py
thinking_engine/: __init__.py  cli.py  server.py
thinking_engine/core/: __init__.py  agent_node.py  backend.py  csr_synapse.py  execution_engine.py  thinking_node.py
thinking_engine/interfaces/: __init__.py
thinking_engine/interfaces/native_agents/: __init__.py  code_agent.py  web_agent.py
thinking_engine/storage/: __init__.py
thinking_engine/storage/policies/: topology_weights.json
thinking_engine/systems/: __init__.py  adaptive_loop.py
wiki/: API-Reference.md  Architecture.md  Biological-Learning.md  Getting-Started.md  Home.md
