[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinking-engine"
version = "1.0.0"
description = "Transparent Cognitive AI Framework with Biological Learning"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Harisha P C", email = "reach.harishapc@gmail.com"},
]
maintainers = [
    {name = "Harisha P C", email = "reach.harishapc@gmail.com"},
]
keywords = [
    "ai", "cognitive", "transparent", "biological-learning",
    "multi-agent", "neural-network", "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "flask>=2.0.0",
    "requests>=2.25.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]
pdf = [
    "PyPDF2>=1.26",
]
gpu = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/reach-Harishapc/thinking-engine"
Documentation = "https://github.com/reach-Harishapc/thinking-engine/tree/main/docs"
Repository = "https://github.com/reach-Harishapc/thinking-engine"
Issues = "https://github.com/reach-Harishapc/thinking-engine/issues"
"Research Paper" = "https://github.com/reach-Harishapc/thinking-engine/blob/main/arxiv_submission/arxiv_paper.pdf"

[project.scripts]
thinking-engine = "thinking_engine.cli:main"
thinking-engine-server = "thinking_engine.server:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "docs", "arxiv_submission", "*.tests", "*.tests.*"]

[tool.setuptools.package-data]
thinking_engine = ["*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "seaborn.*",
    "scipy.*",
]
ignore_missing_imports = true
